Bulma for style

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <noscript>
       <strong>We're sorry but this application doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+
+    <section id="menu"></section>
+    <section id="view"></section>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
